[package]
name = "magic-hotkey"
version = "0.1.1"
description = "A global hotkey command palette"
authors = ["towmeykaw"]
edition = "2021"
default-run = "magic-hotkey"

[lib]
name = "magic_hotkey_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
base64 = "0.22"
urlencoding = "2"
quick-xml = "0.37"
serde_yaml = "0.9"
chrono = "0.4"
regex = "1"
pulldown-cmark = "0.12"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
toml = "0.8"
keyring = "3"
clap = { version = "4", features = ["derive"] }
enigo = "0.6"
dirs = "6"

[target.'cfg(windows)'.dependencies]
keyring = { version = "3", features = ["windows-native"] }
